--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@
                             </span>
                         </div>
 
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">currently learning</span>
+                            <br>
+                            <span class="skills_smaller_description">
+                            blender, figma
+                            </span>
+                        </div>
+
                         <button class="skills_right_button" onclick="rightCarousel(1)">╲╱</button>
                     </div>
                 </div>
@@ -196,7 +204,7 @@
 
                 <div class="skills_box">
                     <p class="skills_title">foreign languages</p>
-                    <p class="skills_list">mandarin chinese, french, japanese</p>
+                    <p class="skills_list">mandarin chinese, french, japanese, korean</p>
 
                     <button class="skills_expand_button" onclick="expandSkillsBox(2)">+</button>
                     <div class="skills_smaller_container">
@@ -219,6 +227,14 @@
 
                         <div class="skills_smaller_box">
                             <span class="skills_smaller_title">japanese</span>
+                            <br>
+                            <span class="skills_smaller_description">
+                                
+                            </span>
+                        </div>
+
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">korean</span>
                             <br>
                             <span class="skills_smaller_description">
                                 
