--- a/index.html
+++ b/index.html
@@ -102,7 +102,22 @@
                             <span class="skills_smaller_description">
                                 the primary language i learned coding on!
                             </span>
+                        </div>
 
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">C</span>
+                            <br>
+                            <span class="skills_smaller_description">
+                                
+                            </span>
+                        </div>
+
+                        <div class="skills_smaller_box">
+                            <span class="skills_smaller_title">C#</span>
+                            <br>
+                            <span class="skills_smaller_description">
+                                
+                            </span>
                         </div>
 
                         <div class="skills_smaller_box">
