--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
 <div class="banner">
     <div class="banner_gifs">
-    <img src="assets/computer.gif" id="computer_gif">
+    <!-- <img src="assets/computer.gif" id="computer_gif">
     <img src="assets/musicnote.gif" id="musicnote_gif">
     <img src="assets/camera.gif" id="camera_gif">
-    <img src="assets/journal.gif" id="journal_gif">
+    <img src="assets/journal.gif" id="journal_gif"> -->
     <span id="name"> DEANNA SHIH <br> </span>
     </div>
     <span id="subname">
-    bse computer science <br>
-    university of michigan '20<br>
+    software engineer <br>
+    <!-- university of michigan '20<br> -->
     </span>
 	<div class = "gudetama-container"><img src="assets/gudetama.png" id="gudetama_img"></div>
     <button id="scroll_button" onclick="scrollToId('about me')">╲╱</button>
