--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 <script src="jquery-3.6.0.min.js" type="text/javascript"></script>
 <!-- Load JavaScript -->
 <script type="text/javascript" src="deanna.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4XGP5R8XRV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-4XGP5R8XRV');
+</script>
 	
 <head>
     <title>Deanna Shih</title>
