--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <span class="section_content">
             <div>
             My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
-            I love creating, and am interested in making user-focused products. 
+            I love creating and making user-focused products. 
             <br><br>
             I also like <span id="typing"></span>|
             </div>
