update resume link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div id = "mini-footer">
             <br>
             Have a 'lil peek at my
-            <a href="https://drive.google.com/file/d/1ZkSacozAPlv7f8XZGjBOE6U5PAUNyjGh/view?usp=sharing" target="_blank" id="resume_link">
+            <a href="https://drive.google.com/file/d/1ZkSacozAPlv7f8XZGjBOE6U5PAUNyjGh/view?usp=share_link" target="_blank" id="resume_link">
                 <button type="button" id="resume_button">resumé</button>
             </a> !
             </div>
