remove foreign languages

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 </div>
 
 
-                <div class="skills_box">
+                <!-- <div class="skills_box">
                     <p class="skills_title">foreign languages</p>
                     <p class="skills_list">mandarin chinese, french, japanese, korean</p>
 
@@ -270,7 +270,7 @@
                         </div>
                         <button class="skills_right_button" onclick="rightCarousel(2)">╲╱</button>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </span>
